# ConversationSimulator

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  RELEASE_NOTES.md  ROADMAP.md  SECURITY.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/desktop/src-tauri/: Cargo.toml  Info.plist  build.rs  entitlements.plist  tauri.conf.json  tauri.steam.conf.json
apps/desktop/src-tauri/.cargo/: config.toml
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/resources/: placeholder
apps/desktop/src-tauri/src/: lib.rs  main.rs  steam.rs
services/convsim-core/: README.md  convsim-core.spec  pyproject.toml
services/convsim-core/convsim_core/: __init__.py  app.py  beta_report.py  config.py  crash_report.py  data_migration.py  errors.py  input_router.py  logging_setup.py  main.py  models.py  network_policy.py  paths.py  privacy.py  redaction.py  scenario_state.py  scenarios.py  schema_paths.py  session_state.py  steam_cloud.py
services/convsim-core/convsim_core/packs/: asset_indexer.py  cli.py  exporter.py  importer.py  injection_scanner.py  models.py  seeder.py  validator.py
services/convsim-core/convsim_core/routers/: cloud_settings.py  diag.py  health.py  logbook.py  models.py  packs.py  preflight.py  privacy.py  relationship_memory.py  runtime_settings.py  scenarios.py  sessions.py  settings.py  setup.py  setup_install.py  sidecar.py  stt.py  tts.py  vad.py  workbench.py
services/convsim-core/convsim_core/runtime/: __init__.py  base.py  fake.py  kokoro_sidecar.py  llama_cpp.py  llama_cpp_download.py  ollama_adapter.py  registry.py  scripted.py  sidecar.py  supervisor.py  types.py
services/convsim-core/convsim_core/schemas/: debrief.schema.json  model-registry.schema.json  npc.schema.json  pack-test.schema.json  pack.schema.json  rubric.schema.json  safety.schema.json  scenario.schema.json  scene.schema.json
services/convsim-core/convsim_core/services/: branch_service.py  debrief_engine.py  model_download_service.py  model_manager_service.py  model_registry_service.py  relationship_memory.py  safety_policy_service.py  setup_install_service.py  timing.py  transcript_export.py  tts_queue.py  turn_pipeline.py
services/convsim-core/convsim_core/storage/: __init__.py  database.py  migrations.py
services/convsim-core/convsim_core/storage/repositories/: pack_repo.py  relationship_repo.py  scenario_repo.py  settings_repo.py
services/convsim-core/convsim_core/stt/: __init__.py  base.py  fake.py  registry.py  types.py  whisper_cpp.py
services/convsim-core/convsim_core/tts/: __init__.py  base.py  fake.py  kokoro.py  registry.py  sentence_splitter.py  types.py  voices.py
services/convsim-core/convsim_core/vad/: __init__.py  base.py  fake.py  registry.py  silero.py  types.py
services/convsim-core/tests/: conftest.py  helpers.py  test_architecture.py  test_branch_session.py  test_crash_report.py  test_data_paths.py  test_debrief_engine.py  test_desktop_cors.py  test_diag.py  test_errors.py  test_fake_runtime.py  test_health.py  test_injection_scanner.py  test_input_router.py  test_kokoro_sidecar.py  test_llama_cpp_download.py  test_llama_cpp_runtime.py  test_logbook_api.py  test_logging_setup.py  test_main.py  test_migrations.py  test_model_download.py  test_model_manager.py  test_model_registry.py  test_network_policy.py  test_ollama_runtime.py  test_pack_exporter.py  test_pack_importer.py  test_pack_seeder.py  test_pack_validator.py  test_packaged_smoke.py  test_packaged_startup.py  test_packs_api.py  test_pg_dating_confidence_boundary.py  test_preflight.py  test_privacy_api.py  test_privacy_defaults.py  test_redaction.py  test_relationship_memory.py  test_relationship_memory_api.py  (+28 more)
(+589 files in other folders)
