# SPDX-License-Identifier: Apache-2.0
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "convsim-core"
version = "0.1.0"
description = "Conversation Simulator core server"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "jsonschema>=4.22",
    "python-multipart>=0.0.9",
    "convsim-prompt",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
]
vad = [
    "onnxruntime>=1.18.0",
]

[project.scripts]
convsim-core = "convsim_core.main:main"
convsim-validate-pack = "convsim_core.packs.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["convsim*"]

[tool.setuptools.package-data]
"convsim_core" = ["schemas/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
