# SPDX-License-Identifier: Apache-2.0
[package]
name = "convsim-desktop"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "convsim_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
# Enable real Steamworks SDK integration. Requires the Steamworks SDK at build
# time (set STEAM_SDK_LOCATION) and steam_api shared library at runtime.
# Off by default so the app builds and runs without any Steam dependency.
#   cargo tauri build --features steam
steam = ["dep:steamworks"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
steamworks = { version = "0.11", optional = true }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
